--- a/style.css
+++ b/style.css
@@ -3,4 +3,5 @@ p {
         padding : 5;
         margin : 5;
         line-height : 20px;
-        }
+        font-family: "Roboto", Helvetica, Sans-serif
+    }
