--- a/style.css
+++ b/style.css
@@ -5,14 +5,6 @@ p {
         line-height : 20px;
     }
 
-h1.a {
+h1 {
   font-family: "Audiowide", sans-serif;
-}
-
-.p {
-  font-family: "Sofia", sans-serif;
-}
-
-h1.b {
-  font-family: "Trirong", serif;
 }
